# mender-back

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml  start.sh
.github/workflows/: deploy-prod.yml
db_data/pgdata/: postmaster.pid
db_data/pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
migrations/: env.py
migrations/versions/: 0578038e59a8_other_entities.py  0c4f98a4f3b2_add_image_key.py  23767fadfe5c_add_chat_recommended_option.py  38b718272db4_fix_entity.py  463b03191f1b_calculated_rating.py  470b99a40eb0_add_poster_key.py  6a8aefbf3a7d_entity.py  6f26d2f269a1_add_trigram_for_matching_entity_names.py  748b26710b54_delete_entity_type.py  8a3ff927cb93_change_to_datetime.py  8df79f4ed811_addd_chat_id_to_chat_history.py  bde76fab663c_name.py  d4ccab65fa77_add_entity_id_to_post.py  d590c50432ff_users_new_attrs.py  e8252882cd18_comments_primary_key.py
scripts/: create-db.sql
src/: exception_handler.py  main.py  models.py
src/api/: chat.py  general.py  implicit.py  login.py  playlist.py  post.py  user.py
src/config/: QueryAdapter.py  asyncDatabase.py  database.py  firebase.py  scheduler.py
src/enums/: Countries.py  EntityTypes.py  Languages.py
src/enums/user/: UserSex.py  UserTypes.py
src/model/: dto.py  requests.py
src/service/: ChatService.py  GeneralService.py  ImplicitService.py  Logger.py  MailService.py  PlaylistService.py  PostService.py  UserService.py  auth.py  mock_post.py
src/service/chatbot/: GrokServiceV2.py  GrokServiceV3.py  GroqService.py  (+1 more)
src/util/: util.py  validator.py
(+40 files in other folders)
